--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "plathir/yii2-smart-upload",
     "description": "Yii-Framework widget for uploading files",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","upload"],
+    "keywords": ["yii2", "extension", "upload"],
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -12,11 +12,12 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-imagine": "*"
+        "yiisoft/yii2-imagine": "*",
+        "plathir/yii2-smart-upload": "@dev"
     },
     "autoload": {
         "psr-4": {
-            "plathir\\cropper\\": ""
+            "plathir\\upload\\": ""
         }
     }
 }
