--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-imagine": "*",
+        "yiisoft/yii2-imagine": "*"
     },
     "autoload": {
         "psr-4": {
