--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-imagine": "*"
+        "yiisoft/yii2-imagine": "*",
+        "jbroadway/urlify": "*"
     },
     "autoload": {
         "psr-4": {
